<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardElevation="2dp"
                app:cardCornerRadius="20dp"
                app:cardForegroundColor="@color/stroke_color"
                app:cardBackgroundColor="@color/stroke_color"
                app:strokeColor="@color/stroke_color"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/title"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="50dp"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textFontWeight="@android:integer/config_longAnimTime"
                        android:textSize="30dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:hint="@string/nama">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="5"
                            app:errorEnabled="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:hint="@string/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:hint="@string/password">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutPasswordConfirm"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        android:hint="@string/confirmpassword"
                        android:inputType="textPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inputPasswordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="2dp">
                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/user"
                            tools:ignore="VectorDrawableCompat" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_margin="10dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/buttonTakePicture"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:backgroundTint="#dbdbdb"
                                android:text="@string/capture"
                                android:textColor="@color/black"
                                tools:targetApi="lollipop" />
                            <Button
                                android:id="@+id/buttonLoadPicture"
                                style="?attr/materialButtonOutlinedStyle"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_gravity="center_vertical"
                                android:gravity="center"
                                android:backgroundTint="#dbdbdb"
                                android:text="@string/capture"
                                android:textColor="@color/black"
                                tools:targetApi="lollipop" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="#19B8A9"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/submit"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#19B8A9"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    tools:targetApi="lollipop" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>